SONAR-7800 add column PROJECTS.UUID_PATH